--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,17 +143,13 @@ android {
 }
 
 dependencies {
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('androidx.annotation:annotation:1.0.0') {
         force = true
     }
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     //butterknife
     implementation 'com.jakewharton:butterknife:10.1.0'
@@ -163,12 +159,11 @@ dependencies {
     implementation project(':jiaozivideoplayer')
     implementation project(':baselibrary')
     implementation project(':statusbarutil')
-
     implementation project(path: ':thunder')
     implementation 'com.google.zxing:core:3.3.0'
     //multidex
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.jwkj:M3U8Manger:v2.3.1'
-//    implementation 'com.github.Jay-Goo:M3U8Downloader:V1.0.8'
+    //    implementation 'com.github.Jay-Goo:M3U8Downloader:V1.0.8'
     implementation 'com.github.huangdali:HPermission:v1.0.4'
 }
