--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -41,10 +41,12 @@ android {
 
 
 dependencies {
-
     api fileTree(include: ['*.jar'], dir: 'libs')
+
     // 项目冲突的包
+
     /************************开始******************************/
+
     //noinspection GradleCompatible
     api 'androidx.appcompat:appcompat:1.0.0'
     api 'androidx.recyclerview:recyclerview:1.0.0'
@@ -53,31 +55,40 @@ dependencies {
 
     /*************************结束*****************************/
     api 'org.glassfish:javax.annotation:10.0-b28'
+
     //84K
+
     //logger
     api 'com.orhanobut:logger:1.15'
+
     //loading对话框
     api 'com.kaopiz:kprogresshud:1.0.2'
     api 'com.lusfold.spinnerloading:library:1.0.0'
     api 'com.pnikosis:materialish-progress:1.7'
+
     //----------------------EventBus--------------
     api 'org.simple:androideventbus:1.0.5.1'
+
     //glide
     api 'jp.wasabeef:glide-transformations:2.0.1'
+
     //multidex
     api 'androidx.multidex:multidex:2.0.0'
 
     //okhttp
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
     //retrofit
     api 'com.squareup.retrofit2:retrofit:2.4.0'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
     api 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     api 'com.squareup.retrofit2:converter-scalars:2.4.0'
+
     //rxjava
     api 'io.reactivex:rxjava:1.3.0'
     api 'io.reactivex:rxandroid:1.2.1'
+
     //GSON
     api 'com.google.code.gson:gson:2.8.2'
 
@@ -85,20 +96,27 @@ dependencies {
     api 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     api 'me.imid.swipebacklayout.lib:library:1.1.0'
     api 'com.github.mzule.activityrouter:annotation:1.1.5'
+
     //友盟
     api 'com.umeng.analytics:analytics:6.1.4'
+
     //butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     //头像裁剪
     api 'com.soundcloud.android:android-crop:1.0.1@aar'
+
     //圆角
     api 'com.makeramen:roundedimageview:2.2.1'
+
     //gif
     api 'pl.droidsonroids.gif:android-gif-drawable:1.2.15'
+
     //banner
     api 'com.bigkoo:convenientbanner:2.0.5'
     api project(':imagepickermodule')
+
     //暂时加上
     api project(':sources')
 
@@ -110,4 +128,5 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr3'
     api 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr3'
     api 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr3'
+    implementation files('libs/OpenInstall_v2.3.1.jar')
 }
