--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
+
+        maven { url "https://jitpack.io" }
     }
 }
 
